# megane

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  coverage.sh
.cargo/: config
mock_data/: logevents_01.json  loggroups_01.json
src/: app.rs  client.rs  constant.rs  event.rs  handler.rs  key_event_wrapper.rs  lib.rs  loader.rs  logevents.rs  loggroups.rs  state.rs  terminal.rs  test_helper.rs  ui.rs  utils.rs
src/handler/: input_event_handler.rs  logevent_event_handler.rs  loggroup_event_handler.rs  main_event_handler.rs  tail_logevent_event_handler.rs
src/state/: logevents_state.rs  loggroups_state.rs  search_state.rs  status_bar_state.rs
src/ui/: event_area.rs  help.rs  search_condition_dialog.rs  search_info.rs  side_menu.rs  status_bar.rs  textbox.rs
tests/: common.rs  input_event_handler_test.rs  logevent_event_handler_test.rs  loggroup_event_handler_test.rs  main_event_handler_test.rs  tail_logevent_event_handler_test.rs
