[package]
name = "megane"
version = "0.0.5"
authors = ["zeroclock <zeroclock@icloud.com>"]
description = "AWS Cloudwatch cli viewer"
edition = "2018"
homepage = "https://github.com/zeroclock/megane"
repository = "https://github.com/zeroclock/megane"
readme = "README.md"
license = "MIT"

[[bin]]
path = "src/bin/main.rs"
name = "megane"

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.3"
crossterm = "0.18.2"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
anyhow = "1.0.32"
rusoto_core = "0.45.0"
rusoto_cloudwatch = "0.45.0"
rusoto_logs = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_sts = "0.45.0"
rusoto_iam = "0.45.0"
tokio = { version = "0.2.22", features = ["full"] }
async-trait = "0.1.40"
chrono = "0.4.15"
scopeguard = "1.1.0"
log = "0.4.13"
log4rs = "1.0.0"

[dev-dependencies]
rusoto_mock = "0.45.0"